[gd_scene load_steps=8 format=3 uid="uid://b6denyfrkb2cb"]

[ext_resource type="Script" path="res://Weapons/Vandal.gd" id="1_ndsmo"]
[ext_resource type="ArrayMesh" uid="uid://b7hq127nd1dk0" path="res://Assets/Weapons/Vandal.obj" id="2_7jglv"]
[ext_resource type="Material" uid="uid://cydqpubljwg0t" path="res://Materials/BaseWeapon.tres" id="2_vktuj"]
[ext_resource type="AudioStream" uid="uid://dij6fd6kbptc1" path="res://Audio/Weapons/Valorant_Vandal_Shot.wav" id="3_0il0t"]

[sub_resource type="Animation" id="Animation_b6x0f"]
resource_name = "Fire"
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3d:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.2), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3d:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.261799), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lfvms"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3d:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3d:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2b15a"]
_data = {
"Fire": SubResource("Animation_b6x0f"),
"RESET": SubResource("Animation_lfvms")
}

[node name="Vandal" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.2)
script = ExtResource("1_ndsmo")

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
mesh = ExtResource("2_7jglv")
surface_material_override/0 = ExtResource("2_vktuj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2b15a")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0il0t")

[node name="Ray" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.4)
target_position = Vector3(0, 0, -100)

[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
